@@ -663,7 +663,7 @@ private:
 
 public:
 	
-    typedef internal::RangeIndexer<RTYPE,Vector> Indexer ;
+    typedef internal::RangeIndexer<RTYPE,true,Vector> Indexer ;
 	
     inline Indexer operator[]( const Range& range ){
         return Indexer( const_cast<Vector&>(*this), range );
